yaml files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-ingress.local
    http:
      paths:
      - path: /order/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-service
            port:
              number: 8080
      - path: /billing/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: billing-service
            port:
              number: 8080
